--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 serde_json = "1.0"
 fake = "4.2"
+sys-info = "0.9"
+uname = "0.1"
+whoami = "1.4"
