--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "glavpetuh"
-version = "0.7.6"
+version = "0.8.0"
 edition = "2024"
 
 [dependencies]
-teloxide = { version = "0.15", features = ["full"] }
-tokio = { version = "1.44", features = ["full"] }
+teloxide = { version = "0.15", features = ["rustls", "macros"] }
+tokio = { version = "1.44", features = ["macros"] }
 log = "0.4"
 dotenv = "0.15"
 pretty_env_logger = "0.5"
 rand = "0.8"
-reqwest = "0.12"
+reqwest = { version = "0.12", features = ["rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 serde_json = "1.0"
