--- a/kubernetes/petuh.yml
+++ b/kubernetes/petuh.yml
@@ -24,4 +24,7 @@ spec:
         - name: regcred
       containers:
         - name: petuh
-          image: vladasz/petuh:0.8.6
+          image: vladasz/petuh:0.9.1
+
+#  kubectl scale deployment petuh --replicas=0 -n petuh
+
