--- a/kubernetes/petuh.yml
+++ b/kubernetes/petuh.yml
@@ -18,13 +18,9 @@ spec:
       labels:
         app: petuh
     spec:
-      # apply then:
-      #      kubectl create secret docker-registry regcred --docker-server=https://index.docker.io/v1/ --docker-username=vladasz --docker-password=<your-pword> --docker-email=146100@gmail.com --namespace=petuh
-      imagePullSecrets:
-        - name: regcred
       containers:
         - name: petuh
-          image: vladasz/petuh:0.11.3
+          image: 192.168.0.201:30500/petuh:0.11.5
 
 #  kubectl scale deployment petuh --replicas=0 -n petuh
 
