--- a/Cross.toml
+++ b/Cross.toml
@@ -2,5 +2,4 @@
 default-target = "x86_64-unknown-linux-gnu"
 
 [target.x86_64-unknown-linux-gnu]
-image = "rust:latest"
-pre-build = ["apt update", "apt install -y gcc libc6-dev pkg-config libssl-dev"]
+pre-build = ["apt update", "apt install -y libssl-dev"]
