--- a/Cross.toml
+++ b/Cross.toml
@@ -3,3 +3,4 @@ default-target = "x86_64-unknown-linux-gnu"
 
 [target.x86_64-unknown-linux-gnu]
 pre-build = ["apt update", "apt install -y libssl-dev"]
+image = "rust:latest"
