--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.11.16"
 anyhow = "1.0"
 dotenv = "0.15"
 fake = "4.2"
+sentry = "0.41"
 log = "0.4"
 pretty_env_logger = "0.5"
 rand = "0.9"
