--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
-[package]
-edition = "2024"
-name = "glavpetuh"
-version = "0.11.17"
+[workspace]
 
-[dependencies]
+default-members = ["petuh"]
+members = [
+    "petuh",
+]
+
+resolver = "3"
+
+[workspace.package]
+version = "0.11.18"
+edition = "2024"
+
+
+[workspace.dependencies]
 anyhow = "1.0"
 dotenv = "0.15"
 fake = "4.2"
@@ -16,9 +25,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 teloxide = { version = "0.16.0", features = ["rustls", "macros"] }
 tokio = { version = "1.44", features = ["macros"] }
-#sys-info = "0.9"
 uname = "0.1"
 whoami = "1.4"
 
-store = { path = "../test-engine/deps/store" }
-
+#store = { path = "../test-engine/deps/store" }
