--- a/kubernetes/petuh.yml
+++ b/kubernetes/petuh.yml
@@ -20,14 +20,14 @@ spec:
     spec:
       containers:
         - name: petuh
-          image: 192.168.0.201:30500/petuh:0.11.17
-          volumeMounts:
-            - mountPath: /datadir
-              name: datadir
-      volumes:
-        - name: datadir
-          persistentVolumeClaim:
-            claimName: petuh-longhorn-pvc
+          image: 192.168.0.201:30500/petuh:0.11.18
+#          volumeMounts:
+#            - mountPath: /datadir
+#              name: datadir
+#      volumes:
+#        - name: datadir
+#          persistentVolumeClaim:
+#            claimName: petuh-longhorn-pvc
 
 #  kubectl scale deployment petuh --replicas=0 -n petuh
 
