--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,26 @@
 [workspace]
 
 default-members = ["petuh"]
-members = [
-    "petuh",
-]
+members = ["petuh"]
 
 resolver = "3"
 
 [workspace.package]
-version = "0.11.18"
 edition = "2024"
-
+version = "0.12.102"
 
 [workspace.dependencies]
 anyhow = "1.0"
 dotenv = "0.15"
 fake = "4.2"
-sentry = "0.41"
 log = "0.4"
 pretty_env_logger = "0.5"
 rand = "0.9"
 reqwest = { version = "0.12", features = ["rustls-tls"] }
+sentry = "0.41"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-teloxide = { version = "0.16.0", features = ["rustls", "macros"] }
+teloxide = { version = "0.17", features = ["rustls", "macros"] }
 tokio = { version = "1.44", features = ["macros"] }
-uname = "0.1"
-whoami = "1.4"
 
 #store = { path = "../test-engine/deps/store" }
