--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ sentry = "0.41"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 teloxide = { version = "0.17", features = ["rustls", "macros"] }
-tokio = { version = "1.44", features = ["macros"] }
+tokio = { version = "1.46", features = ["macros"] }
+tonic = "0.13"
+prost = "0.14"
+tonic-build = "0.13"
 
 #store = { path = "../test-engine/deps/store" }
