--- a/petuh/Cargo.toml
+++ b/petuh/Cargo.toml
@@ -16,5 +16,10 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 teloxide = { workspace = true }
 tokio = { workspace = true }
+tonic = { workspace = true }
+prost = { workspace = true }
 
 #store = { workspace = true }
+
+[build-dependencies]
+tonic-build = { workspace = true }
