--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,16 @@ resolver = "3"
 edition = "2024"
 version = "0.12.104"
 
+[workspace.metadata.cargo-machete]
+ignored = ["prost"]
+
 [workspace.dependencies]
 anyhow = "1.0"
 dotenv = "0.15"
 fake = "4.2"
 log = "0.4"
 pretty_env_logger = "0.5"
+prost = "0.13"
 rand = "0.9"
 reqwest = { version = "0.12", features = ["rustls-tls"] }
 sentry = "0.41"
@@ -23,7 +27,6 @@ serde_json = "1.0"
 teloxide = { version = "0.17", features = ["rustls", "macros"] }
 tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
 tonic = "*"
-prost = "0.13"
 tonic-build = "*"
 
 #store = { path = "../test-engine/deps/store" }
