--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,10 @@
+#[profile.release]
+#codegen-units = 1
+#debug-assertions = false
+#lto = "fat"
+#opt-level = 3
+#overflow-checks = false
+#strip = true
+
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
