--- a/Cross.toml
+++ b/Cross.toml
@@ -3,7 +3,4 @@ default-target = "x86_64-unknown-linux-gnu"
 
 [target.x86_64-unknown-linux-gnu]
 image = "rust:latest"
-pre-build = [
-    "apt update",
-    "apt install -y libssl-dev protobuf-compiler"
-]
+pre-build = ["apt update", "apt install -y libssl-dev protobuf-compiler"]
