--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 default-members = ["petuh"]
-members = ["petuh", "petuh-llm"]
+members = ["petuh", "petuh-llm", "petuh-responses"]
 
 resolver = "3"
 
@@ -28,5 +28,10 @@ teloxide = { version = "0.17", features = ["rustls", "macros"] }
 tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
 tonic = "*"
 tonic-build = "*"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "chrono"] }
+
+sercli = { path = "../deps/sercli/sercli" }
+#sercli = { git = "https://github.com/vladasz/sercli.git", rev = "f6f50dea2ee3372f4da5d95ce2083379768439eb" }
+
 
 #store = { path = "../test-engine/deps/store" }
