--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
 tonic = "*"
 tonic-build = "*"
 
-sercli = { path = "../deps/sercli/sercli" }
-#sercli = { git = "https://github.com/vladasz/sercli.git", rev = "f6f50dea2ee3372f4da5d95ce2083379768439eb" }
+#sercli = { path = "../deps/sercli/sercli" }
+sercli = { git = "https://github.com/vladasz/sercli.git", rev = "27869d8e3dff5ac5cb22c7f0b4e31e118ca8a31a" }
 
 #store = { path = "../test-engine/deps/store" }
