--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 services:
-  pg:
-    image: postgres:17-alpine
-    command: postgres -c max_connections=1000
-    environment:
-      POSTGRES_USER: petuh
-      POSTGRES_PASSWORD: petuh
-      POSTGRES_DB: petuh_db
-      PGDATA: /var/lib/postgresql/data
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - 54325:5432
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
+  petuh:
+    image: 192.168.0.201:30500/petuh:0.13.105
+    platform: linux/amd64
+    container_name: petuh
+    restart: unless-stopped
+    networks:
+      - petuh-net
 
-volumes:
-  postgres_data:
+  petuh-llm:
+    image: 192.168.0.201:30500/petuh-llm:0.13.105
+    platform: linux/amd64
+    container_name: petuh-llm
+    restart: unless-stopped
+    ports:
+      - "50051:50051"
+    networks:
+      - petuh-net
+
+networks:
+  petuh-net:
+    driver: bridge
