--- a/petuh-llm/Cargo.toml
+++ b/petuh-llm/Cargo.toml
@@ -8,11 +8,13 @@ anyhow = { workspace = true }
 dotenv = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true }
-sentry = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
+tracing = { workspace = true }
+
+common = { workspace = true }
 
 [build-dependencies]
 tonic-build = { workspace = true }
