fixed debian version mismatch

--- a/infra/secrets/pg.enc.yml
+++ b/infra/secrets/pg.enc.yml
@@ -1,35 +1,67 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+    name: petuh
+sops:
+    lastmodified: "2025-08-20T00:47:52Z"
+    mac: ENC[AES256_GCM,data:u7XXafXCp+UGC5YjHBRG7La6m7GecamcjdvG3kZfEo0Lt5W6I6m62hAN+F1zHZM5v+iPdBVKXU+t4JoNXYHTQ3+2gbnjEAdNevmycUBvugV8jElWoHo/6TIxSXJj4G8bdO8O+1g8H/4tF4xJeAlVnEeKJQab76mV34aGC7aiWG0=,iv:4vF8JRDKbcX/7VOUhv7931sb3UodMkBJynHStnwNoEc=,tag:ZdHIe7sFAWVES3gmn/R0mQ==,type:str]
+    pgp:
+        - created_at: "2025-08-20T00:47:52Z"
+          enc: |-
+            -----BEGIN PGP MESSAGE-----
+
+            hQIMA4vJSF8FWAgfAQ/5AYIRr+UKvOVM487M2mngP8qlfKCBo+w4VYYw8jJwl376
+            02csKIJGDO3Y889G7bNj6ZmzHN+2Ylv3hwmhzt6JQewsPWKEGAXChljoeJ7VRujr
+            36xMdyMEpkFUUBOAA51vNWCt9dXQzUxvazWurl8GIX4bXidTXEIiVdU/G3tKCPMM
+            dRRgKo2zEsRclDiOLo5st6bTnzstHpvKdjUx8uIr5pe42EOZGgG7XXJnTrGTK1kz
+            0PxPUaeeN8Jc0e6kg79ieawCSVDpclbgmpM/jV5mNFNOdpBnnbIvx3N8lPL91Q8G
+            xKYDk6MmfsxgW6zWcb97EIbXNk0v/Irm+Bj5ik9YtpDFdZUM/VoY5dKNpBqR54ia
+            r0jnhbAaDu+8Y8zSUywNxq+/6xZgniuDuU34O8hlycQ5fWLWZ4f4busfdy3H9qVV
+            WxkVRHsMzmMMMwch6NszKoUBZ7ST/fdHd51uhuWGK5P5vbTZAQ3cWiJUMLfmx0XV
+            c6OSVFQwP8tHb428sY4kbS+uzHS2VzoSfQLKZaVU3sVhhm5b8g9yaEdjauTzCBhU
+            EBSId3DTDwLStg//orHlEyETyjd99Ck7t4GEkjyAmRWikGLWQYUQx5BvvDycTjIP
+            7LWtS5yUzZS12jZj/LYoKd8Jqx2qb+AW+OTZ0xiyHz6v1RfUvI0XwVhqujBu/prU
+            aAEJAhCdurx1ctT3lAE6FEgQ6kTWesMp9/G4kSHypLomEfiSL0A4oOVio8o+ocLh
+            foJMsctO9BSkcDRD9LG/CRcxt4bYm+cf2nAbOWcMXQtZHsQPYEQ0PV2Hj3MbjSOC
+            GV0FE/2YpX4s
+            =DR8s
+            -----END PGP MESSAGE-----
+          fp: 990835A9A98E0DD7FE36241B691422132581B365
+    encrypted_regex: (?i)(password|webhook|username)
+    version: 3.10.2
+---
+apiVersion: v1
 kind: Secret
 metadata:
     name: postgres-credentials
     namespace: petuh
 type: kubernetes.io/basic-auth
 stringData:
-    username: ENC[AES256_GCM,data:U45Z5ME=,iv:OCVrraJcd3QK9+0b00r15oKoH7hATH9MWrAzrED8T0E=,tag:W57IlBa6DP7lhaPfxWhoNQ==,type:str]
-    password: ENC[AES256_GCM,data:PrKjaKY=,iv:YzJcLomMrPTJoauoOY9veemEW3PyaIMWmUUb6Yd08FU=,tag:nbsXVcrmgt5hziR1aLoX9w==,type:str]
+    username: ENC[AES256_GCM,data:dRw9q7M=,iv:L9UFd0MQPoOEfGHRHblEOmYlf5WLamexeFQBbmJLAWM=,tag:QaRfqj7+JZ57sTz8CoVmjA==,type:str]
+    password: ENC[AES256_GCM,data:6ljYUC0=,iv:jJ4eekBd4+qaJnsQOUEALVCGXoI9YKdmbHbxLg77Cpg=,tag:JFEk5ls2PvM87ICedD+eYA==,type:str]
 sops:
-    lastmodified: "2025-08-20T00:02:45Z"
-    mac: ENC[AES256_GCM,data:lsVDZt95is9FKV85NqIUW6mtR8c4c5N7pfurXi7eVaGC0xoNBYd0+tuO+4xawU7wJgg/eELQZVZwVcJPwoKkFnDHYe/ykY8PfQBqJbSCusAt0NaOI4AF7v+uUHbO3RtIWEvk7VGLD67WB1eap8BQU1b1PMno9LPUolDX2MbO1QA=,iv:4BkGfsK+DnIFdNKeHhnj19BGQn07r+gTRS2OIdmy2uY=,tag:BjewQ/oa/IuR7jbX9Es/EA==,type:str]
+    lastmodified: "2025-08-20T00:47:52Z"
+    mac: ENC[AES256_GCM,data:u7XXafXCp+UGC5YjHBRG7La6m7GecamcjdvG3kZfEo0Lt5W6I6m62hAN+F1zHZM5v+iPdBVKXU+t4JoNXYHTQ3+2gbnjEAdNevmycUBvugV8jElWoHo/6TIxSXJj4G8bdO8O+1g8H/4tF4xJeAlVnEeKJQab76mV34aGC7aiWG0=,iv:4vF8JRDKbcX/7VOUhv7931sb3UodMkBJynHStnwNoEc=,tag:ZdHIe7sFAWVES3gmn/R0mQ==,type:str]
     pgp:
-        - created_at: "2025-08-20T00:02:45Z"
+        - created_at: "2025-08-20T00:47:52Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQIMA4vJSF8FWAgfAQ//YF/2b9KmCBNEGk7EESJOvE5NhjN5nVc8bxNOYsXkz4Ov
-            IHiyQhHJUBTYnrEYlior7DxuepVof54kW/p/oOOl8yYrJmsNZzn9/6KwePKrAEvr
-            +l1aKoEWkOC8kp+ZSnyv2SIj6yNmw+95ghMqiv3XF9ffHSlKjm4pDdDbxqa4+W/8
-            TsXDhK7mnVxoKm1uQj88//vclRFMRRKVYtuKG+r/O+6esl++yNA1BYLwn1/cdr/2
-            yCkKQBaT7wVUCtG9G5yesx8pl1Io9fGHnJk7g356Ewb52cX/55E6kFt0+XMWrvsA
-            VVa5q/OMDPXhhqqeaiYYDZ8se0RLzcs+WDgzHqaYmfgnmgKtC9uvhzf59cya3aQx
-            E9k3pSchxGdSLs4eSB1T+tYOxEV9DD8M57lQuypma1JpZ4KzdgQdKQjg08Dlb9w8
-            Vk/fpJtcqP+PbkIbSAgRgzrTMY+nAJqPl1FxeeY9pb/M4OeZegWggGzcCpTO/Pun
-            KetYPgC/Mgaxgqcl1qd1uXCVcxflFVQshtQDs6jUhRw1Qm13txKks8Jb7WzeQzZ7
-            nNDnn2wBE1GmPc+oTQJNrI7LynmoW0lh55Fj2wNV+QGIwyULYWvbs3LK4GKvm66I
-            GmFUT85e7/QLHOiO6MDsRIHxPIvrjXMdVrs9rpPr6FdRWLYAYBBk1R+Q8zQYn6zU
-            aAEJAhCZIbl5GtgdyYDGeig4TFGodl/edtQ7xRDqEorA+lHjvNcDLMRAkYOS/C3r
-            YJdKn3tkiI3GYhE44Ygwp8eoRADZBPp5gQsVTxXK+im/ZfH/2/HF8cjs6yFDyK9R
-            QrEo2tNP808r
-            =xkWk
+            hQIMA4vJSF8FWAgfAQ/5AYIRr+UKvOVM487M2mngP8qlfKCBo+w4VYYw8jJwl376
+            02csKIJGDO3Y889G7bNj6ZmzHN+2Ylv3hwmhzt6JQewsPWKEGAXChljoeJ7VRujr
+            36xMdyMEpkFUUBOAA51vNWCt9dXQzUxvazWurl8GIX4bXidTXEIiVdU/G3tKCPMM
+            dRRgKo2zEsRclDiOLo5st6bTnzstHpvKdjUx8uIr5pe42EOZGgG7XXJnTrGTK1kz
+            0PxPUaeeN8Jc0e6kg79ieawCSVDpclbgmpM/jV5mNFNOdpBnnbIvx3N8lPL91Q8G
+            xKYDk6MmfsxgW6zWcb97EIbXNk0v/Irm+Bj5ik9YtpDFdZUM/VoY5dKNpBqR54ia
+            r0jnhbAaDu+8Y8zSUywNxq+/6xZgniuDuU34O8hlycQ5fWLWZ4f4busfdy3H9qVV
+            WxkVRHsMzmMMMwch6NszKoUBZ7ST/fdHd51uhuWGK5P5vbTZAQ3cWiJUMLfmx0XV
+            c6OSVFQwP8tHb428sY4kbS+uzHS2VzoSfQLKZaVU3sVhhm5b8g9yaEdjauTzCBhU
+            EBSId3DTDwLStg//orHlEyETyjd99Ck7t4GEkjyAmRWikGLWQYUQx5BvvDycTjIP
+            7LWtS5yUzZS12jZj/LYoKd8Jqx2qb+AW+OTZ0xiyHz6v1RfUvI0XwVhqujBu/prU
+            aAEJAhCdurx1ctT3lAE6FEgQ6kTWesMp9/G4kSHypLomEfiSL0A4oOVio8o+ocLh
+            foJMsctO9BSkcDRD9LG/CRcxt4bYm+cf2nAbOWcMXQtZHsQPYEQ0PV2Hj3MbjSOC
+            GV0FE/2YpX4s
+            =DR8s
             -----END PGP MESSAGE-----
           fp: 990835A9A98E0DD7FE36241B691422132581B365
     encrypted_regex: (?i)(password|webhook|username)
