--- a/Cross.toml
+++ b/Cross.toml
@@ -2,5 +2,5 @@
 default-target = "x86_64-unknown-linux-gnu"
 
 [target.x86_64-unknown-linux-gnu]
-image = "rust:latest"
+image = "rust:bookworm"
 pre-build = ["apt update", "apt install -y libssl-dev protobuf-compiler"]
