--- a/petuh-data/Cargo.toml
+++ b/petuh-data/Cargo.toml
@@ -11,6 +11,7 @@ serde = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
+strum = { workspace = true }
 tracing = { workspace = true }
 
 common = { workspace = true }
