--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,3 +9,5 @@ dotenv = { workspace = true }
 sentry = { workspace = true }
 tracing-appender = { workspace = true }
 tracing-subscriber = { workspace = true }
+redis = { workspace = true }
+tracing = { workspace = true }
