--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [workspace]
 
 default-members = ["petuh"]
-members = ["petuh", "petuh-llm", "petuh-data", "common", "tests"]
+members = ["petuh", "petuh-llm", "petuh-data", "common", "petuh-tests"]
 
 resolver = "3"
 
 [workspace.package]
 edition = "2024"
-version = "0.16.101"
+version = "0.16.102"
 
 [workspace.metadata.cargo-machete]
 ignored = ["prost"]
