storing last user mesage and first redis usage in redis

--- a/petuh/Cargo.toml
+++ b/petuh/Cargo.toml
@@ -12,6 +12,7 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 teloxide = { workspace = true }
+chrono = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
