--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "3"
 
 [workspace.package]
 edition = "2024"
-version = "0.17.100"
+version = "0.17.102"
 
 [workspace.metadata.cargo-machete]
 ignored = ["prost"]
@@ -23,6 +23,7 @@ reqwest = { version = "0.12", features = ["rustls-tls"] }
 sentry = "0.42"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "chrono"] }
 strum = "0.27"
 teloxide = { version = "0.17", features = ["rustls", "macros"] }
