--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,6 +6,7 @@ version.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 dotenv = { workspace = true }
+chrono = { workspace = true }
 redis = { workspace = true }
 sentry = { workspace = true }
 tracing = { workspace = true }
